footer spacing fix
should correctly stick to the bottom of the page now and not cover any other elements.

--- a/meme-generator/style.css
+++ b/meme-generator/style.css
@@ -30,6 +30,8 @@ h1 {
     justify-content: center;
     text-align: center;
     padding-top: 25px;
+    flex-shrink: 0;
+    gap: 0;
 }
 
 .content {
@@ -88,6 +90,7 @@ textarea {
 
 
 .specialContent {
+    margin-top: 0px;
     display: flex;
     margin: auto;
     justify-content: center;
@@ -188,19 +191,26 @@ textarea {
 }
 
 footer {
-    /*position: absolute;
-    */
-    position: fixed;
-    left: 0px;
+    position: relative;
     bottom: 0px;
     width: 100%;
     background-color: #222426;
     color: #fff;
     text-decoration: none;
     text-align: center;
+    margin-top: 25px;
+}
+
+.footer,
+.push {
+  height: 50px;
 }
 
 a {
     color: #fff;
     font-family: "Lora", "Courier New", monospace, serif;
 }
+
+.wrapper {
+    min-height: 100%;
+  }
